fix: popup not showing

--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -86,3 +86,7 @@
     //     width: 250px;
     // }
 }
+
+.popover-body {
+  min-width: 276px;
+}
